# fastapi-todo

./: .coverage  .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  PROMPT.md  README.md  TODO.md  docker-compose.yml  pyproject.toml  todo.db
.github/workflows/: build-and-deploy.yaml  test.yml
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: todos.py
app/core/: config.py  database.py  init_db.py  logging.py
app/models/: todo.py
app/schemas/: todo.py
docs/: ARCHITECTURE.md  DEVELOPMENT.md  GITHUB_ACTIONS.md  LEARNINGS.MD  PROMPT_TO_RECREATE.md  ROADMAP.md  SETUP.md  TROUBLESHOOTING.md
frontend/: .env.docker  Dockerfile  README.md  package-lock.json  package.json  vitest.config.ts
frontend/src/: App.tsx
frontend/src/__tests__/: App.test.tsx  TodoItem.test.tsx  api.integration.test.ts
frontend/src/components/: TodoItem.tsx
frontend/src/services/: api.ts  logger.ts
frontend/src/types/: todo.ts
k8s/: generated-dev.yaml
k8s/auth/: README.md
k8s/base/: api-deployment.yaml  api-service.yaml  frontend-deployment.yaml  frontend-service.yaml  github-actions-sa.yaml  images-patch.yaml  ingress.yaml  kustomization.yaml  postgres-service.yaml  postgres-statefulset.yaml
k8s/overlays/dev/: kustomization.yaml  namespace.yaml
scripts/: build-images.sh  docker-login.sh  generate-github-actions-kubeconfig.sh  generate-k8s-configs.sh
terraform/: README.md  eks.tf  main.tf  outputs.tf  variables.tf  vpc.tf
tests/: test_api.py
