[project]
name = "fastapi-todo"
version = "0.1.0"
description = "A modern, production-ready Todo List API built with FastAPI"
authors = [
    {name = "Martin Lyden"}
]
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "fastapi (>=0.110.0,<0.111.0)",
    "uvicorn[standard] (>=0.27.1,<0.28.0)",
    "sqlalchemy (>=2.0.27,<3.0.0)",
    "pydantic (>=2.6.1,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "pydantic-settings (>=2.1.0,<3.0.0)",
    "python-multipart (>=0.0.9,<0.1.0)",
    "psycopg2-binary (>=2.9.9,<3.0.0)",
    "loguru (>=0.7.2,<0.8.0)"
]

[tool.poetry]
name = "fastapi-todo"
version = "0.1.0"
description = "A modern, production-ready Todo List API built with FastAPI"
authors = ["Martin Lyden"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
sqlalchemy = "^2.0.27"
pydantic = "^2.6.1"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.1.0"
python-multipart = "^0.0.9"
psycopg2-binary = "^2.9.9"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.5"
httpx = "^0.26.0"
black = "^24.1.1"
ruff = "^0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py313"
select = ["E", "F", "I", "N", "W", "B", "A", "C4", "PT", "SIM", "ARG"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=app --cov-report=xml --cov-report=term-missing"
filterwarnings = ["ignore::DeprecationWarning"]
asyncio_mode = "auto"
